edited markup, start gulp with npm run, this.timeSend

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -358,3 +358,6 @@ textarea:focus, textarea:active {
     max-width: 95%; }
     .startpage .startpage__info p {
       font-size: 22px; } }
+
+.container {
+  height: 100%; }
